[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/AudioManager.gd" type="Script" id=1]

[node name="AudioManager" type="Button"]
visible = false
script = ExtResource( 1 )

[node name="CorrectLetter" type="AudioStreamPlayer" parent="."]

[node name="IncorrectLetter" type="AudioStreamPlayer" parent="."]

[node name="WordComplete" type="AudioStreamPlayer" parent="."]

[node name="DevilDeath" type="AudioStreamPlayer" parent="."]

[node name="DevilSpawn" type="AudioStreamPlayer" parent="."]

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="." to="." method="_on_AudioManager_pressed"]
